fixtures/semantic/valid/minimal.php
<?php

function phase3_minimal(): int
{
    return 1;
}
