fixtures/semantic/invalid/recovery/missing-name.php
<?php
namespace ;

function prompt33_missing_name(): void {}
